<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/addDevName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/devName"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/addStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/startDate"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/addEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endDate"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/addTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/taskName" /> <!-- Changed from Spinner to EditText -->


    <EditText
        android:id="@+id/addEstimateDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:hint="@string/estimateDay" />

</LinearLayout>
